[gd_scene load_steps=11 format=3 uid="uid://daxa4lq3laqhh"]

[ext_resource type="Theme" uid="uid://bqehwwm3pykby" path="res://Assets/menutheme.tres" id="1_ovbkj"]
[ext_resource type="Script" path="res://Scripts/Niveles.gd" id="2_kaw3a"]
[ext_resource type="Texture2D" uid="uid://h0tduu7lxv0b" path="res://Assets/Crunchycons/Icons/ArrowRightBlack_20220327174209.png" id="3_1wbyw"]
[ext_resource type="PackedScene" uid="uid://b6hq8840mjyn3" path="res://Escenas/Felicidades.tscn" id="3_6cg4n"]
[ext_resource type="Texture2D" uid="uid://b2pqul3vtawhm" path="res://Assets/Crunchycons/Icons/ArrowRightTransparent_20220327174205.png" id="4_ge8ti"]
[ext_resource type="Texture2D" uid="uid://bjmeagxedebts" path="res://Assets/Crunchycons/Icons/ArrowRight_20220327174215.png" id="5_mi6yy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xyeb0"]
texture = ExtResource("3_1wbyw")
texture_margin_top = 10.0
texture_margin_bottom = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3xvc0"]
texture = ExtResource("4_ge8ti")
texture_margin_top = 10.0
texture_margin_bottom = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q1bi4"]
texture = ExtResource("5_mi6yy")
texture_margin_top = 10.0
texture_margin_bottom = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="Theme" id="Theme_sd1vh"]
Button/styles/hover = SubResource("StyleBoxTexture_xyeb0")
Button/styles/normal = SubResource("StyleBoxTexture_3xvc0")
Button/styles/pressed = SubResource("StyleBoxTexture_q1bi4")

[node name="Niveles" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 2
theme = ExtResource("1_ovbkj")
script = ExtResource("2_kaw3a")

[node name="Devlog1" type="Button" parent="ItemList"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -287.0
offset_right = 610.0
offset_bottom = -193.0
grow_vertical = 2
text = "Devlog 1"

[node name="DevlogNormal" type="Button" parent="ItemList"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 26.0
offset_top = -287.0
offset_right = 596.0
offset_bottom = -193.0
grow_horizontal = 2
grow_vertical = 2
text = "Devlog Normal"

[node name="DevlogHito" type="Button" parent="ItemList"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1240.0
offset_top = -112.0
offset_right = -670.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 2
text = "Devlog Hito"

[node name="NotasDevlogs" type="Button" parent="ItemList"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -614.0
offset_top = -112.0
offset_right = -44.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 2
text = "Notas Devlogs"

[node name="Hito2" type="Button" parent="ItemList"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 26.0
offset_top = 41.0
offset_right = 596.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
text = "Hito 2"

[node name="Hito1" type="Button" parent="ItemList"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = 41.0
offset_right = 610.0
offset_bottom = 135.0
grow_vertical = 2
text = "Hito 1"

[node name="Hito3" type="Button" parent="ItemList"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -925.0
offset_top = 183.0
offset_right = -355.0
offset_bottom = 277.0
grow_horizontal = 0
grow_vertical = 2
text = "Hito 3"

[node name="Felicidades" parent="ItemList" instance=ExtResource("3_6cg4n")]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 240.0
offset_top = 128.0
offset_right = 1520.0
offset_bottom = 848.0
scale = Vector2(0.625463, 0.632086)

[node name="Volver" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme = SubResource("Theme_sd1vh")
text = "                      

                                          "
